# SegmentationAnalyzer

./: .gitignore  GenerateShapeMetricsBatch.py  GenerateShapeMetricsBatch_nomp.py  License.txt  NOTES.md  README.md  TOM_multithread2.py  compareresults.py  conda-environment.yml  conv_hull.py  example.py  loadandplot.py  loadandplot_temp.py  multithread_TOM_run.py  requirements.txt  setup.cfg  simple_plot.py  toyexample_Lamp_multithread.py  toyexample_TOM.py  toyexample_TOM_multithread.py  toyexample_gfpTEMP_multithread.py
analysis/AnalysisTools/: ShapeMetrics.py  SyntheticData.py  conv_hull.py  datautils.py  experimentalparams.py  statcalcs.py
analysis/Visualization/: cellstack.py  plotter.py
analysis/imagej_macros/: 3dcellviewer_shell.ijm  stackbioformatconverter.ijm  stackbioformatconverter_multichannel.ijm
analysis/stackio/: Cellobj.py  labelledcsvhandler.py  metadataHandler.py  stackio.py
examples/: GenerateShapeMetricsBatch.py  GenerateShapeMetricsBatch_nomp.py  compareresults.py  simple_ShapeMetrics.py  simple_plot.py
src/: loadandplot.py
src/AnalysisTools/: ShapeMetrics.py  SyntheticData.py  _types.py  conv_hull.py  datautils.py  dtypes.py  experimentalparams.py  statcalcs.py  types.py
src/Visualization/: cellstack.py  plotter.py  test.tiff
src/examples/: ShapeMetrics.py
src/imagej_macros/: 3dcellviewer.ijm
src/stackio/: Cellobj.py  labelledcsvhandler.py  metadataHandler.py  stackio.py
