[metadata]
name = Segmentation_Analyzer
version = 0.0.1
author = Pushkar Sathe
author_email = pushkar.sathe@nih.gov
description = For analyzing and visualizing Generated segmentations from the RPEMAP project
long_description = file: README.md#, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/markdown
url = ####
project_urls =
    Bug
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requres = >=3.7
include_package_data = True

[options.packages.find]
where = src

#TODO: VERIFY ALL CONTENTS BEFORE FINALIZING